# AIClient

./: .env.example  .gitignore  INSTALLATION.md  README.md  codigo_proyecto.txt  exportar_proyecto.py  install.sh  pyproject.toml  test_models.py
agents/: architect.py  base.py  coder.py  collaborative.py  executor.py  manager.py  multi_turn.py  parallel.py  planner.py  task_agent.py
cli/: ai.py  ai_wrapper  main.py
config/: .env.example
core/: config.py  context_builder.py  context_retriever.py  knowledge_graph.py  learner.py  memory.py  orchestrator.py  project_file.py  project_index.py  project_inspector.py  project_snapshot.py  standards.py  standards_learner.py
dashboard/: app.py
llm/: base.py  exceptions.py  gemini.py  intent_analyzer.py  nim.py  prompt_builder.py  provider_manager.py  provider_selector.py  response.py  router.py
llm/prompts/: code_analysis.txt  code_generation.txt  general.txt  project_analysis.txt  readme.txt
obsidian/: index.py  rag.py  search.py  semantic.py
scripts/: vscode_integration.py
skills/: base.py  manager.py
skills/code/: analyze.py  executor.py  generate.py  project_analyzer.py  sandbox.py
skills/docs/: readme.py
skills/migration/: project_migrator.py  refactor.py
skills/projects/: full_generator.py  laravel.py
skills/proposals/: generator.py
skills/scraping/: freelance.py  integrations.py  linkedin.py  linkedin_workana.py
skills/tools/: docker.py  git.py  shell.py  terminal.py
tests/: test_ambiguous_code_requests.py  test_end_to_end.py  test_router_prompt_builder.py  test_routing_and_context.py
